<resources>
    <string name="app_name">小本本</string>

    <string name="upgrade_title">别来无恙</string>
    <string name="upgrade_cancel">取消</string>
    <string name="upgrade_comfirm">更新</string>

    <string name="title_add_memorial">请输入标题</string>
    <string name="about_us">关于小本本</string>
    <string name="log_out">退出登录</string>
    <string name="version_name">小本本 %s</string>

    <string name="logout">是否要退出登录？</string>
    <string name="cancel">取消</string>
    <string name="comfirm">确定</string>

    <string name="delete_comment">是否删除该评论？</string>

    <string name="hope_title_in_history">许下小心愿</string>
    <string name="finish_hope_title_in_history">达成心愿：%s</string>

    <string name="finish_app">再按一次退出</string>

    <!--bind-->
    <string name="bind_error_code">请输入正确的邀请码</string>
    <string name="bind_error_code_peer">请输入对方的邀请码</string>
    <string name="your_bind_code">你的邀请码：</string>
    <string name="input_peer_code">请输入 ta 的邀请码</string>
    <string name="bind_state_suc">有情人终成眷属</string>
    <string name="bind_state_single">等待对方</string>
    <string name="bind_state_original">还未绑定心上人\n快邀请 ta 下载吧~</string>
    <string name="bind_state_finish">来日方长，请多关照~</string>
    <string name="bind_state_refresh">状态已更新</string>
    <string name="bind_lover_title">连理</string>
    <string name="bind_lover">绑定心上人</string>
    <string name="update_state">更新状态</string>
    <string name="error_invite_num">请确认邀请码是否正确</string>

    <string name="history_comment_empty">还没有输入内容~</string>

    <!--add dialog-->
    <string name="home_add_item_title_text">添加想说的话</string>
    <string name="home_add_item_title_memorial">添加纪念日</string>
    <string name="home_add_item_title_hope">添加小心愿</string>

    <!--delete dialog-->
    <string name="delete_dialog">删除</string>
    <string name="delete_dialog_cancel">取消</string>

    <!--add memorial-->
    <string name="add_memorial_empty_title">标题不能为空</string>
    <string name="add_memorial_lable">添加纪念日</string>
    <string name="add_memorial_title">来日纵是千千晚星，亮过今晚月亮</string>
    <string name="add_text">添加</string>
    <string name="save_text">保存</string>
    <string name="delete_text">删除</string>
    <string name="history_memorial_day">添加了纪念日</string>
    <string name="memorial_day_detail_title">纪念日</string>
    <!--add memorial-->

    <!--add hope-->
    <string name="add_hope_lable">许愿</string>
    <string name="add_hope_title">我所有的向往都是你</string>
    <string name="title_add_hope">请输入心愿</string>
    <string name="input_taobao_hint">心愿链接（选填）</string>
    <string name="taobao_link_tip">如需链接淘宝商品，请前往淘宝商品详情页，点击分享-复制链接后填写至心愿链接中</string>
    <string name="add_tip_choose_level">还没有选小心心~</string>
    <string name="add_hope_empty_title">标题不能为空</string>
    <!--add hope-->

    <!--add text-->
    <string name="add_text_lable">心声</string>
    <string name="add_text_title">想把我唱给你听</string>
    <string name="title_add_text">请输入想说的话</string>
    <string name="add_text_empty">内容不能为空</string>
    <!--add text-->

    <string name="hope_list_title">愿望清单</string>
    <string name="memorial_day_list_title">我怀念的</string>

    <string name="memorial_after">%s已经</string>
    <string name="memorial_belong">距离%s还有</string>

    <!--tip-->
    <string name="delete_data">是否要删除该数据？</string>
    <string name="finish_hope_hint">梦想成真之际，想说点什么吗？</string>
    <string name="finish_hope_hint_empty">内容不能为空</string>
    <string name="finish_hope_btn">完成心愿</string>
    <string name="finish_hope">是否已达成心愿？</string>

    <string name="comment_suc">评论成功！</string>

    <string name="taobao_not_install">请先安装淘宝</string>
    <string name="goto_taobao">是否前往淘宝？</string>

    <!--notification-->
    <string name="notification_add_memorial_title">ta 添加了纪念日</string>
    <string name="notification_add_hope_title">ta 悄悄许了个愿望</string>
    <string name="notification_add_text_title">ta 对你说了悄悄话</string>
    <string name="notification_update_mc_title">ta 更新了点东西</string>
    <string name="notification_add_memorial_content">快去瞅瞅吧~</string>
    <string name="pushmanager_init_failed">推送初始化失败</string>

    <string name="about_us_developer">Designed by D &#038; Lina in Hangzhou\nPowered by Love</string>

    <string name="create_text_time">%s月%s日</string>

    <string name="mc_name">小姨妈</string>
    <string name="mc_come_for_man">她的姨妈来了，要加倍呵护她哦~</string>
    <string name="mc_go_for_man">她的姨妈走了，和她一起happy吧~</string>
    <string name="mc_lable">小姨妈</string>
    <string name="mc_come_for_women">告诉他姨妈来了</string>
    <string name="mc_go_for_woman">告诉他姨妈走了</string>

    <string name="week_mon">星期一</string>
    <string name="week_tue">星期二</string>
    <string name="week_wed">星期三</string>
    <string name="week_thu">星期四</string>
    <string name="week_fri">星期五</string>
    <string name="week_sat">星期六</string>
    <string name="week_sun">星期日</string>

    <string name="set_user_info">填写个人信息</string>

    <string name="set_gender_lable">设置性别</string>
    <string name="user_center">个人信息</string>
    <string name="set_user_name">设置昵称</string>
    <string name="set_user_name_hint">请输入昵称</string>

    <string name="mc_tip_for_man">最近她可能会心情烦躁，她也很辛苦的。喜欢才会放肆，要多多体谅她哦~</string>
    <string name="mc_tip_for_woman">最近你可能会感觉心情烦躁。爱就是克制，不要对他乱发脾气哦~</string>
    <string name="mc_gap_day">%s 天</string>
    <string name="comfirm_update_mc">选中日期：%s\n\n是否新增状态？</string>
    <string name="comfirm_delete_mc">选中日期：%s\n是否移除状态？</string>
    <string name="mc_come_item">姨妈来了</string>
    <string name="mc_go_item">姨妈走了</string>
    <string name="add_mc_go_suc">撒花~愉快地玩耍吧~</string>
    <string name="add_mc_come_suc">要注意休息，保重身体哦~</string>


    <string name="man_str">男</string>
    <string name="woman_str">女</string>

    <string name="sp_key_mc_enable">sp_key_mc_enable</string>
    <string name="title_activity_login">登录</string>

    <string name="login_lable">登录账号</string>
    <string name="login_accout">邮箱地址</string>
    <string name="login_pwd">密码</string>
    <string name="login_login">登录</string>
    <string name="login_forget_pwd">忘记密码？</string>

    <string name="login_register">新用户注册</string>
    <string name="login_register_lable">注册账号</string>
    <string name="login_nickname">昵称</string>
    <string name="login_register_next">下一步</string>
    <string name="error_email">请输入正确的邮箱地址</string>
    <string name="empty_pwd">密码不能为空</string>
    <string name="empty_nickname">昵称不能为空</string>
    <string name="bind_email">验证邮箱</string>
    <string name="input_email">请输入用于找回密码的邮箱</string>
    <string name="check_email">发送验证邮件</string>
    <string name="already_check_email">已在邮箱中完成验证</string>
    <string name="empty_email">邮箱地址不能为空</string>
    <string name="check_failed">请到邮箱中打开验证邮件并点击激活链接~</string>
    <string name="check_suc">邮箱验证成功~</string>
    <string name="comfirm_email">请确认注册邮箱为：\n%s\n若邮箱地址填写错误，将无法使用找回密码功能！</string>

    <string name="change_pwd_lable">重置密码</string>
    <string name="change_pwd">发送重置密码邮件到以上邮箱</string>
    <string name="already_change_pwd">已在邮件中修改密码</string>
    <string name="already_send_email">邮件已发送，请注意查收~</string>
    <string name="already_send_check_email">验证邮件已发送，请注意查收~</string>

    <string name="set_title">设置</string>
    <string name="check_new_version">检查新版本</string>
    <string name="feed_back">意见反馈</string>
    <string name="mc_tip_enable_title">是否启用心烦预警功能</string>
    <string name="mc_tip_enable_des">在经期来临的附近几天提醒自己要心平气和（或多多包容她）</string>
    <string name="mc_enable_title">是否启用小姨妈功能</string>
    <string name="mc_enable_des">记录经期时间</string>
    <string name="bind_lover_dialog_cancel">取消</string>
    <string name="bind_lover_dialog_text">邀请你一起使用小本本</string>
    <string name="bind_lover_dialog_recieve">接受</string>
    <string name="feedback_connect_number">联系方式</string>
    <string name="feedback_des">问题描述</string>
    <string name="feedback_connect_number_hint">请输入您的qq号或手机号</string>
    <string name="feedback_des_hint">如果您有什么问题或想法、建议，请告诉我们</string>
    <string name="feedback_btn_add">提交</string>
    <string name="feed_back_suc">感谢您的反馈！小本本会努力变得更好的！</string>
</resources>
