<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addmemorialday.AddMemorialActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            android:layout_width="match_parent"
            app:title="@string/add_memorial_lable"></android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_memorial_title"
                style="@style/add_top_text"
                android:gravity="center"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/titleLayout"
                android:layout_margin="@dimen/add_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_add_memorial"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:textSize="18sp"
                tools:text="test"
                android:paddingLeft="5dp"
                android:layout_margin="@dimen/add_margin"
                android:textColor="@color/theme_color"
                android:gravity="center_vertical"
                android:layout_height="50dp"/>

            <com.yazhi1992.yazhilib.widget.RoundView.RoundLoadingView
                android:id="@+id/btn_comfirm"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/add_margin"
                android:layout_marginRight="@dimen/add_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/loading_btn"
                app:rv_text="@string/add_text"
                app:layout_constraintTop_toBottomOf="@+id/datePicker"></com.yazhi1992.yazhilib.widget.RoundView.RoundLoadingView>

        </LinearLayout>

    </RelativeLayout>

</layout>
