<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.yazhi1992.moon.ui.newlogin.NewLoginActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/login_lable"></android.support.v7.widget.Toolbar>

        <View
            android:id="@+id/bg1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:background="@color/light_bg_color"
            ></View>

        <EditText
            android:id="@+id/et_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:inputType="text"
            android:hint="@string/login_accout"
            android:textSize="16sp"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="50dp"/>

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account"
            android:background="@color/light_bg_color"
            ></View>

        <EditText
            android:id="@+id/et_pwd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:background="@null"
            android:textSize="16sp"
            android:paddingRight="20dp"
            android:hint="@string/login_pwd"
            android:layout_width="0dp"
            android:layout_height="50dp"/>

        <View
            android:id="@+id/bg2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pwd"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/light_bg_color"
            ></View>

        <CheckBox
            android:id="@+id/cb_save_pwd"
            app:layout_constraintTop_toBottomOf="@+id/et_pwd"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="记住密码"
            android:textSize="16sp"
            android:theme="@style/MyCheckBox"
            android:textColor="@color/color_9"
            />

        <com.yazhi1992.yazhilib.widget.RoundView.RoundLoadingView
            android:id="@+id/btn_comfirm"
            style="@style/loading_btn"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_save_pwd"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            app:rv_text="@string/login_login"></com.yazhi1992.yazhilib.widget.RoundView.RoundLoadingView>

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_pwd"
            android:textColor="@color/theme_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_comfirm"
            android:padding="20dp"
            />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:background="@drawable/theme_press_selector"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:textColor="@color/theme_color"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_comfirm"
            android:padding="20dp"
            />
    </android.support.constraint.ConstraintLayout>

</layout>
