<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.yazhi1992.moon.ui.newlogin.NewLoginActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/login_register_lable"></android.support.v7.widget.Toolbar>

        <View
            android:id="@+id/bg1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:background="@color/light_bg_color"
            ></View>

        <EditText
            android:id="@+id/et_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/login_accout"
            android:textSize="16sp"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="50dp"/>

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_account"
            android:background="@color/light_bg_color"
            ></View>

        <EditText
            android:id="@+id/et_pwd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:background="@null"
            android:textSize="16sp"
            android:paddingRight="20dp"
            android:hint="@string/login_pwd"
            android:layout_width="0dp"
            android:layout_height="50dp"/>

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pwd"
            android:background="@color/light_bg_color"
            ></View>

        <EditText
            android:id="@+id/et_nickname"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line2"
            android:paddingLeft="20dp"
            android:background="@null"
            android:textSize="16sp"
            android:paddingRight="20dp"
            android:hint="@string/login_nickname"
            android:layout_width="0dp"
            android:layout_height="50dp"/>

        <View
            android:id="@+id/bg2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nickname"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/light_bg_color"
            ></View>

        <com.yazhi1992.yazhilib.widget.RoundView.RoundLoadingView
            android:id="@+id/btn_comfirm"
            style="@style/loading_btn"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nickname"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            app:rv_text="@string/login_register_next"></com.yazhi1992.yazhilib.widget.RoundView.RoundLoadingView>

    </android.support.constraint.ConstraintLayout>

</layout>
